tests/valid/definite/ListAppend_Valid_4.whiley
void System::main([string] args):
    [int] l = [1,2,3]
    [real] r = [4.23,5.5]
    r = r + l
    print str(r)
