tests/invalid/simple/ListAppend_Invalid_2.whiley
void System::main([string] args):
    [int] l = [1,2,3]
    [string] r = args + l
    print str(r)
